# tcb

./: .gitattributes  .gitignore  README.md  mise.toml  test.md
.beads/: config.yaml  metadata.json
.git-crypt/keys/default/0/: C50B7193425E7E8D64AA825AE0FE10E03D83483A.gpg
.github/: FUNDING.yml
.github/workflows/: release.yml
WebAssets/: app.css  app.js  index.html  print.css
dev/: CONVENTIONS.md  README.md  WORKING-CONTEXT.md  image-prompts.md  monorepo-public-private-pattern.md  naming-lore.md  neovim-embedding.md  rcs-versioning-design.md  release-pipeline.md  verified-releases.md
dev/keys/gpg/: brett-gnomatix-public.asc  tcb_0.1.0_x64_en-US.msi.asc
dev/keys/minisign/: tcb.key  tcb.key.pub
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
